--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Flask==3.0.0
 Flask-Cors==4.0.0
-tensorflow==2.20.0
-numpy>=2.1.0
-gunicorn
+tensorflow==2.15.0
+numpy==1.26.2
+gunicorn==21.2.0
+opencv-python-headless==4.8.1.78
+Pillow==10.1.0
+h5py==3.10.0
