--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==3.0.0
 Flask-Cors==4.0.0
-tensorflow==2.15.0
-numpy==1.26.2
+tensorflow==2.5.0
+numpy==1.19.5
 gunicorn==21.2.0
-opencv-python-headless==4.8.1.78
-Pillow==10.1.0
-h5py==3.10.0
+Pillow==9.5.0
+h5py==3.1.0
+protobuf==3.19.6
