--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Flask==3.0.0
-Flask-Cors==4.0.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
 tensorflow==2.5.0
 numpy==1.19.5
-gunicorn==21.2.0
 Pillow==9.5.0
 h5py==3.1.0
 protobuf==3.19.6
+python-multipart==0.0.6
