--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
+fastapi==0.68.0
+uvicorn==0.15.0
+pydantic==1.8.2
 tensorflow==2.5.0
 numpy==1.19.5
 Pillow==9.5.0
 h5py==3.1.0
 protobuf==3.19.6
 python-multipart==0.0.6
+typing-extensions==3.7.4.3
